--- a/package.json
+++ b/package.json
@@ -2,23 +2,37 @@
   "name": "text-game",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack/prod.js ",
+    "start": "webpack-dev-server --config webpack/webpack-dev.config.js --open"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "events": "~3.0.0",
+    "inquirer": "~7.0.0",
+    "keycode": "~2.2.0",
     "play-sound": "~1.1.3",
-    "readline-sync": "~1.4.10"
+    "readline-sync": "~1.4.10",
+    "recursive-readdir": "~2.2.2",
+    "terminal-kit": "~1.31.3",
+    "tty": "~1.0.1"
   },
   "devDependencies": {
-    "eslint": "~6.3.0",
-    "eslint-config-google": "~0.14.0",
-    "eslint-config-standard": "~14.1.0",
-    "eslint-plugin-import": "~2.18.2",
-    "eslint-plugin-node": "~10.0.0",
-    "eslint-plugin-promise": "~4.2.1",
-    "eslint-plugin-standard": "~4.0.1"
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "~7.5.5",
+    "@babel/preset-env": "^7.2.3",
+    "babel-loader": "^8.0.5",
+    "clean-webpack-plugin": "^1.0.0",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "raw-loader": "^1.0.0",
+    "terser-webpack-plugin": "^1.2.1",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
   }
 }
