--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "private": true,
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack --config webpack/prod.js ",
-    "start": "webpack-dev-server --config webpack/webpack-dev.config.js --open"
+    "build": "webpack --config webpack/webpack-prod.config.js ",
+    "start": "webpack-dev-server --host localhost --port 3000 --config webpack/webpack-dev.config.js --open"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "events": "~3.0.0",
+    "fastpriorityqueue": "~0.6.3",
+    "gl-matrix": "~3.1.0",
+    "howler": "~2.1.2",
     "inquirer": "~7.0.0",
     "keycode": "~2.2.0",
     "play-sound": "~1.1.3",
     "readline-sync": "~1.4.10",
     "recursive-readdir": "~2.2.2",
+    "soundjs": "~1.0.1",
     "terminal-kit": "~1.31.3",
     "tty": "~1.0.1"
   },
