--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "play-sound": "~1.1.3",
     "readline-sync": "~1.4.10",
     "recursive-readdir": "~2.2.2",
+    "sorted-array": "~2.0.4",
     "soundjs": "~1.0.1",
     "terminal-kit": "~1.31.3",
     "tty": "~1.0.1"
