--- a/package.json
+++ b/package.json
@@ -29,12 +29,17 @@
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "~7.5.5",
     "@babel/preset-env": "^7.2.3",
+    "@types/gl-matrix": "^2.4.5",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^1.0.0",
+    "source-map-loader": "^1.0.1",
     "terser-webpack-plugin": "^1.2.1",
+    "ts-loader": "^8.0.0",
+    "typescript": "^3.9.6",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
