--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "sorted-array": "~2.0.4",
     "soundjs": "~1.0.1",
     "terminal-kit": "~1.31.3",
-    "tty": "~1.0.1"
+    "tty": "~1.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
