--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "terser-webpack-plugin": "^1.2.1",
     "ts-loader": "^8.0.0",
     "typescript": "^3.9.6",
+    "typescript-loader": "^1.1.3",
     "webpack": "^5.24.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.11.2",
