--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "esnext",
     "target": "esnext",
     "allowJs": true,
+    "sourceMap": true,
     "allowSyntheticDefaultImports": true
   },
   "include": ["./src/**/*"]
